--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
+    <header class="header">
+        <nav class="menu"></nav>
+    </header>
 
   </body>
 </html>
